# energy_inside

./: README.md  collect.py  pyproject.toml  setup.py  simulate_battery.py
dashboard/: index.html
docs/superpowers/plans/: 2026-03-28-p1-meter-collector.md
docs/superpowers/specs/: 2026-03-28-energy-dashboard-design.md  2026-03-28-p1-meter-collector-design.md
src/energy_inside/: __init__.py  dolthub.py  p1_meter.py  sql.py
tests/: test_dolthub.py  test_p1_meter.py  test_sql.py
