[project]
name = "energy-inside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Dekeyser", email = "thomas.dekeyser@noreply.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
